--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
     />
   </head>
   <body>
-    <!---HERO Section--->
+    <!---HEADER Section--->
 
-    <div class="hero">
+    <div class="header">
       <nav>
         <h2 class="logo">Krazy <span>Nails Spa</span></h2>
         <ul>
@@ -31,14 +31,14 @@
           <li><a href="#">Skills</a></li>
           <li><a href="#">Contact Us</a></li>
         </ul>
-        <a href="#" class="btn">Become a Member</a>
+        <a href="#" class="btn">Become a Client</a>
       </nav>
 
       <div class="content">
         <h4>Hello, my name is</h4>
         <h1>Krazy <span>K</span></h1>
         <h3>I am a nail tech!</h3>
-        <div class="newslatter">
+        <div class="newsletter">
           <form>
             <input
               type="email"
@@ -55,7 +55,7 @@
     <!---About section--->
     <section class="about">
       <div class="main">
-        <img src="img/about-img.png" />
+        <img src="img/about-img.png" class="about-img"/>
         <div class="about-text">
           <h2>About Me</h2>
           <h5>Nail Technician <span>& Artist</span></h5>
@@ -71,7 +71,7 @@
     </section>
 
     <!---SERVICE section--->
-    <div class="service">
+    <article class="service">
       <div class="title">
         <h2>My Services</h2>
       </div>
@@ -102,8 +102,7 @@
               Gel-X extensions are specially formulated, soak-off gel tips that
               ensure long-lasting, three-plus weeks adhesion to a natural nail.
               It is a fast and easy system that allows for simple removal with
-              the use of just acetone. No dust, odor, excessive buffing or
-              filing to the natural nail.
+              the use of just acetone.
             </p>
 
             <p style="text-align: center">
@@ -117,11 +116,10 @@
           <h5>Pedicures</h5>
           <div class="pra">
             <p>
-              A pedicure is a comprehensive treatment of your feet and is
-              suitable for both men and women. It involves cutting, trimming and
-              shaping your toenails, tending to your cuticles, exfoliating,
-              hydrating and massaging your feet, and, if desired, painting your
-              toenails.
+              The pedicure treatment is suitable for both men and women. It
+              involves cutting, trimming and shaping your toenails, tending to
+              your cuticles, exfoliating, hydrating and massaging your feet,
+              and, if desired, painting your toenails.
             </p>
 
             <p style="text-align: center">
@@ -130,7 +128,7 @@
           </div>
         </div>
       </div>
-    </div>
+    </article>
 
     <!--CONTACT section-->
     <div class="contact-me">
