--- a/index.html
+++ b/index.html
@@ -140,8 +140,7 @@
     <footer>
       <p>Krazy K</p>
       <p>
-        This is a fully HTML and CSS "mock" nail portfolio - please click on the
-        link below to acces the code on github! Thank you :
+        This is a fully HTML and CSS "mock" nail portfolio
       </p>
       <div class="social">
         <a href="#"><i class="fab fa-github"></i></a>
